[package]
name = "plotters-iced"
version = "0.11.0"
description = "Iced backend for Plotters"
readme = "README.md"
license = "MIT"
edition = "2021"
resolver = "2"
homepage = "https://github.com/D-Brox/plotters-cosmic-iced"
repository = "https://github.com/D-Brox/plotters-cosmic-iced.git"
documentation = "https://docs.rs/crate/plotters-iced/"
keywords = ["plotters", "chart", "plot", "iced", "backend"]
categories = ["visualization"]
authors = ["Joylei <leingliu@gmail.com>","D Brox <davidfbg00@gmail.com"]

[dependencies]
plotters = { version = "0.3", default-features = false }
plotters-backend = "0.3"
once_cell = "1"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["tokio"]

[dev-dependencies]
plotters = { version = "0.3", default-features = false, features = [
    "chrono",
    "area_series",
    "line_series",
    "point_series",
] }
chrono = { version = "0.4", default-features = false }
rand = "0.9"
tokio = { version = "1", features = ["rt"], default-features = false }
sysinfo = { version = "0.33.1", default-features = false, features = ["system"]}

[dev-dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["tokio","winit"]

[patch.crates-io.iced]
git = "https://github.com/pop-os/libcosmic.git"

[patch.crates-io.iced_core]
git = "https://github.com/pop-os/libcosmic.git"

[patch.crates-io.iced_widget]
git = "https://github.com/pop-os/libcosmic.git"

[patch.crates-io.iced_graphics]
git = "https://github.com/pop-os/libcosmic.git"

[patch.crates-io.iced_renderer]
git = "https://github.com/pop-os/libcosmic.git"

[patch.crates-io.iced_futures]
git = "https://github.com/pop-os/libcosmic.git"
